firmware/defmt-test/macros/tests/ui/after_each-has-immutable-param.stderr
error: parameter must be a mutable reference (`&mut $Type`)
 --> tests/ui/after_each-has-immutable-param.rs:6:12
  |
6 |     fn say(name: &str) {
  |            ^^^^
